--- a/src/static/style_login.css
+++ b/src/static/style_login.css
@@ -38,7 +38,9 @@
 
 #login-right {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-items: left;
+    gap: 0.5rem;
 }
 
 #login-form {
