--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,4 +1,6 @@
 @import url("fonts/fonts.css");
+@import url("style_base.css");
+@import url("style_modal.css");
 
 :root {
     font-size: 1rem;
@@ -28,10 +30,39 @@
     --dark-red: hsl(345, 80%, 50%);
     --red-shadow: hsla(345, 100%, 65%, 30%);
 
+    --green: hsl(135, 80%, 57%);
+    --dark-green: hsl(135, 80%, 44%);
+    --green-shadow: hsla(135, 80%, 57%, 30%);
+
     --translucent: hsla(255, 10%, 99%, 80%);
-    --status-pending: hsl(44, 100%, 62%);
-    --status-approved: hsl(105, 80%, 57%);
-    --status-rejected: hsl(5, 100%, 61%);
+
+    --status-green: hsl(105, 80%, 57%);
+    --status-green-shadow: hsla(105, 80%, 57%, 50%);
+    --status-green-dark: hsl(105, 80%, 45%);
+    --status-green-text: white;
+    --status-yellow: hsl(44, 100%, 62%);
+    --status-yellow-shadow: hsla(44, 100%, 62%, 50%);
+    --status-yellow-dark: hsl(44, 100%, 45%);
+    --status-yellow-text: black;
+    --status-red: hsl(5, 100%, 61%);
+    --status-red-shadow: hsla(5, 100%, 61%, 50%);
+    --status-red-dark: hsl(5, 100%, 45%);
+    --status-red-text: white;
+
+    --status-pending: var(--status-yellow);
+    --status-pending-text: var(--status-yellow-text);
+    --status-approved: var(--status-yellow);
+    --status-approved-text: var(--status-yellow-text);
+    --status-issued: var(--status-yellow);
+    --status-issued-text: var(--status-yellow-text);
+    --status-completed: var(--status-green);
+    --status-completed-text: var(--status-green-text);
+    --status-denied: var(--status-red);
+    --status-denied-text: var(--status-red-text);
+    --status-cancelled: var(--status-red);
+    --status-cancelled-text: var(--status-red-text);
+    --status-expired: var(--status-red);
+    --status-expired-text: var(--status-red-text);
 }
 
 * {
@@ -62,6 +93,7 @@ a {
 }
 
 input, textarea, select, button {
+    appearance: none;
     font: inherit;
     text-align: inherit;
 }
@@ -70,7 +102,7 @@ textarea {
     resize: vertical;
 }
 
-input[type=text], input[type=password], input[type=search], input[type=number], textarea {
+input[type=text], input[type=password], input[type=search], input[type=number], input[type=email], textarea {
     padding: 0.3rem 0rem;
     background: none;
     border: none;
@@ -79,22 +111,22 @@ input[type=text], input[type=password], input[type=search], input[type=number], 
     transition: background 0.1s, border-bottom 0.1s;
 }
 
-input[type=number]:invalid {
+input[type=number]:invalid, input[type=email]:invalid {
     background: var(--light-red);
     border-bottom: 0.05rem solid var(--light-red-2);
     color: var(--red);
     font-weight: bold;
 }
 
-input[type=number]:invalid:focus {
+input[type=number]:invalid:focus, input[type=email]:invalid:focus {
     border-bottom: 0.05rem solid var(--red);
 }
 
-input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disabled, textarea:disabled {
+input[type=text]:disabled, input[type=search]:disabled, input[type=number]:disabled, input[type=email]:disabled, textarea:disabled {
     background: var(--light-gray);
 }
 
-input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, input[type=number]:focus, textarea:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=search]:focus, input[type=number]:focus, input[type=email]:focus, textarea:focus {
     outline: none;
     border-bottom: 0.05rem solid var(--dark-blue);
 }
@@ -148,6 +180,7 @@ input[type=submit].btn-red:not(:disabled):hover, input[type=submit].btn-red:not(
 
 input[type=submit]:disabled, input[type=button]:disabled, a.btn:disabled, select:disabled, button:disabled {
     background: var(--gray);
+    color: white;
     cursor: not-allowed;
 }
 
@@ -183,7 +216,7 @@ main {
     overflow: hidden;
 }
 
-#profile-options{
+#profile-options {
     display: none;
     flex-direction: column;
     position: absolute;
@@ -204,7 +237,7 @@ main {
     z-index: 1000;
 }
 
-#profile-options p{
+#profile-options p {
     border-radius: 10px;
     padding: 7px;
     
@@ -212,11 +245,11 @@ main {
     font-weight: lighter;
 }
 
-#profile-options p:hover{
+#profile-options p:hover {
     background: var(--light-gray);
 }
 
-#add-user-form{
+#add-user-form {
     display: flex;
     flex-direction: row;
     gap: 10px;
