--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -19,6 +19,11 @@ header {
     justify-content: space-between;
 }
 
+header > * {
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+
 #title {
     font-size: 2rem;
     font-weight: 700;
@@ -28,29 +33,6 @@ header {
 #title span {
     font: inherit;
     color: var(--dark-blue);
-}
-
-#profile {
-    width: 10%;
-    position: relative;
-    text-align: right;
-}
-
-#profile:hover{
-    cursor: pointer;
-}
-
-#profile p {
-    margin: 0;
-}
-
-#profile-name {
-    font-weight: bold;
-}
-
-#profile-role {
-    font-style: italic;
-    font-size: 80%;
 }
 
 #sidebar {
@@ -128,31 +110,18 @@ main h1 {
     display: flex;
     align-items: center;
     gap: 1.5rem;
-    position: sticky;
     top: 0;
 }
 
 #content-top > * {
+    flex-grow: 0;
+    flex-shrink: 0;
     margin: 0;
 }
 
-#content-top > h1 {
-    flex-grow: 1;
-    flex-shrink: 0;
-}
-
-#inputs {
+#content-top .btn-group {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-}
-
-#inputs > div {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    width: 100%;
+    gap: 0.5rem;
 }
 
 #search {
@@ -161,6 +130,7 @@ main h1 {
     display: flex;
     gap: 1rem;
     flex-grow: 1;
+    flex-shrink: 1;
 }
 
 #search-box {
@@ -253,16 +223,12 @@ main h1 {
     grid-template-columns: 0.375fr 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.75fr 0.75fr 0.5fr;
 }
 
+.request-table.custodian .table-row {
+    grid-template-columns: 0.375fr 0.5fr 0.75fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr 0.25fr 0.25fr;
+}
+
 .request-table.user .table-row {
-    grid-template-columns: 0.375fr 0.5fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr;
-}
-
-.request-table.approved-table .table-row {
-    grid-template-columns: 0.375fr 0.5fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-}
-
-.request-table .table-row {
-    grid-template-columns: 0.375fr 0.5fr 0.5fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 1fr;
+    grid-template-columns: 0.375fr 0.75fr 0.5fr 0.625fr 0.75fr 2fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
 }
 
 .user-table .table-row {
@@ -309,7 +275,7 @@ main h1 {
     text-align: right;
 }
 
-.table-row .hide {
+.table-row .original-id {
     display: none;
 }
 
@@ -335,23 +301,38 @@ main h1 {
 }
 
 .status.pending {
-    background-color: var(--status-pending);
-    color: black;
+    background: var(--status-pending);
+    color: var(--status-pending-text);
 }
 
 .status.approved {
-    background-color: var(--status-approved);
-    color: black;
+    background: var(--status-approved);
+    color: var(--status-approved-text);
 }
 
-.status.rejected {
-    background-color: var(--status-rejected);
-    color: white;
+.status.issued {
+    background: var(--status-issued);
+    color: var(--status-issued-text);
+}
+
+.status.completed {
+    background: var(--status-completed);
+    color: var(--status-completed-text);
+}
+
+.status.denied {
+    background: var(--status-denied);
+    color: var(--status-denied-text);
+}
+
+.status.cancelled {
+    background: var(--status-cancelled);
+    color: var(--status-cancelled-text);
 }
 
 .status.expired {
-    background-color: var(--status-rejected);
-    color: white;
+    background: var(--status-expired);
+    color: var(--status-expired-text);
 }
 
 #add-table .add-user-table{
